# TSID_for_Python

./: Fixed_Manipulator.py  README.md  conf.py
TSID/: __init__.py
TSID/Contacts/: __init__.py
TSID/Formulations/: inverse_dynamics_formulation_acc_force.py  inverse_dynamics_formulation_base.py
TSID/Math/: constraint_base.py  constraint_bound.py  constraint_equality.py  constraint_inequality.py
TSID/Robots/: robot_wrapper.py
TSID/Solvers/: Solver_HQP_qpOASES.py  __init__.py  fwd.py  utils.py
TSID/Tasks/: __init__.py  task_base.py  task_joint_posture.py  task_motion.py  task_se3_equality.py
TSID/Trajectories/: __init__.py  trajectory_base.py  trajectory_euclidian.py  trajectory_se3.py
TSID/Utils/: utils.py
Unit test/: tasks.py
models/ur_description/: CMakeLists.txt  package.xml
