<?xml version="1.0"?>
<package format="2">
  <name>ur5_description</name>
  <version>1.0.0</version>
  <description>The ur5_description package</description>

  <maintainer email="ggory15@snu.ac.kr">Sanghyun Kim</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
